fixed field layout bug where 6 or more card would break layout, added playerfield and opponent field on click listeners and methods

--- a/css/jeu.css
+++ b/css/jeu.css
@@ -3,6 +3,7 @@ body,html{
     width: 100%;
     margin:0;
     padding: 0;
+    overflow: hidden;
 }
 #BoardContainer{
     display: grid;
@@ -17,7 +18,7 @@ body,html{
 #OpponentHand,#PlayerHand{
     display: grid;
     grid-template-rows: 1fr;
-    grid-template-columns: repeat(4,1fr);
+    grid-template-columns: repeat(8,1fr);
     background-color: rgba(35, 35, 35, 0.7);
     gap: 2px;
 }
@@ -34,7 +35,7 @@ body,html{
 #OpponentField,#PlayerField{
     display: grid;
     grid-template-rows: 1fr;
-    grid-template-columns: repeat(6,1fr);
+    grid-template-columns: repeat(7,1fr);
     height: 20vh;
     gap: 2px;
 }
@@ -49,7 +50,7 @@ body,html{
 
 .Card{
     background-image: url("../images/imgSrc/cardTemplate.png");
-    background-size: cover;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
     height: 100%;
     text-align: center;
@@ -57,4 +58,10 @@ body,html{
 .Card div:first-of-type{
     width: 30%;
     margin: auto;
+}
+#CardImage{
+    width: 100%;
+    height: 100%;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
 }
